force-app/main/default/objects/MDR_Data_Element_Purpose__c/MDR_Data_Element_Purpose__c.object-meta.xml
<CustomObject>
    <label>Data Element Purpose</label>
    <nameField>
        <displayFormat>DEP-{0000000}</displayFormat>
        <label>Data Element Purpose Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Element Purposes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>