force-app/main/default/objects/MDR_Data_Element_Purpose__c/fields/Data_Element__c.field-meta.xml
<CustomField>
    <fullName>Data_Element__c</fullName>
    <label>Data Element</label>
    <referenceTo>MDR_Data_Element__c</referenceTo>
    <relationshipLabel>Data Element Purposes</relationshipLabel>
    <relationshipName>Data_Element_Purposes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>