force-app/main/default/objects/MDR_Data_Element_Purpose__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner</label>
    <type>Checkbox</type>
</CustomField>