force-app/main/default/objects/MDR_Data_Element_Purpose__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Claims/Legal</fullName>
            </value>
            <value>
                <fullName>PSLP</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Subscribers</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Actuarial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>